# cs_foundations_for_agentic_multimodal_ai

./: README.md
module_0/: MODULE 0 — Python for Scalable, Readable AI Code.md  Module 0 - Python for Scalable, Readable AI Code.md
module_0/exercises/exercise_0_2/: e0_2_prompt.md  pyproject.toml  requirements.txt
module_0/project_root/: module_0_project_answer.md  module_0_project_prompt.md  module_0_project_review.md  pyproject.toml
module_1/: MODULE 1 — Algorithmic Thinking (But Only What You Need).md  Module 1 - Algorithmic Thinking (But Only What You Need).md
module_1/module_1_capstone/: agent.py  cache.py  executor.py  main.py  models.py  module_1_project_interactive_build.md  module_1_project_prompt.md  module_1_project_review.md  planner.py  tasks.py
module_2/: MODULE 2 — Human–AI Collaboration & Prompt Engineering for Data Science.md  Module 2 - Human-AI Collaboration & Prompt Engineering for Data Science.md
module_2/module_2_capstone/: module_2_project_answer.md  module_2_project_prompt.md  module_2_project_review.md
module_3/: MODULE 3 — Managing AI-Driven Development in Agile Systems.md
module_3/module_3_capstone/: module_3_project_prompt.md  step_1_answer.md  step_1_prompt.md  step_1_review.md  step_2_answer.md  step_2_prompt.md  step_2_review.md  step_3_answer.md  step_3_prompt.md  step_3_review.md  step_4_answer.md  step_4_prompt.md  step_4_review.md  step_5_answer.md  step_5_prompt.md  step_5_review.md
resources/documents/: AI Sprint Playbook.md  AI Sprint Scope Contract Template.md  CS Foundations For AI Lesson Plan.md  (+5 more)
(+88 files in other folders)
